# Studying-Companies-With-Weaviate

./: .gitignore  .pre-commit-config.yaml  README.md  Summarise_website_with_weaviate-checkpoint.ipynb  Summarise_website_with_weaviate.ipynb  book.toml  d3_data.json  docker-compose.yml  docker-compose_backup.yml  docker-compose_summarize.yml  environment.yml  eslint.config.mjs  index.html  index_clickable_links.html  list_dead_code.py  long.json  minimal.json  my-model.Dockerfile  output.json  package-lock.json  package.json  prerequisites.md  pyproject.toml  serve_frontend.sh  setup.cfg  setup.py  summarised.json  summarised_by_weaviate.json  summariser.py  website_data.json
book/: book.js  https:__trucol.io_.html  https:__trucol.io_TruSec.html  https:__trucol.io_Usecases_.html  https:__trucol.io_about_.html  https:__trucol.io_contact_.html  https:__trucol.io_faq_.html  https:__trucol.io_protocol_.html  index.html  print.html  store.js
docs/: make.bat  parse_args.rst  requirements.txt
frontend/: SUMMARY.md  build_tree.js  d3_data.json  dropdown.js  host_json_locally.py  https:__trucol.io_.md  https:__trucol.io_TruSec.md  https:__trucol.io_Usecases_.md  https:__trucol.io_about_.md  https:__trucol.io_contact_.md  https:__trucol.io_faq_.md  https:__trucol.io_protocol_.md  https:__weaviate.io.md  https:__weaviate.io_#contact-us.md  https:__weaviate.io_assets_files_filtered-vector-search-with-caches-performance-fac846a6b769cac8845c4c8ab2f0e07c.png.md  https:__weaviate.io_assets_files_weaviate-architecture-overview-54e15328eb9bdfe6695f85443d892f2e.svg.md  (+934 more)
(+82 files in other folders)
