[metadata]
name = pythontemplate
version = attr: pythontemplate.__version__
description = Selenium browser controller for apt Firefox on Ubuntu 22.10
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hiveminds/pythontemplate
author = a-t-0
author_email = no-email@no-email.org
maintainer = a-t-0
maintainer_email = no-email@no-email.org
license = AGPLv3
license_file = licence
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Browsers

[options]
packages = find:
package_dir =
    =src
# Dependencies
install_requires =
    pyannotate>=1.2.0
    pytest-cov>=4.0.0
    typeguard>=2.13.3
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pythontemplate = pythontemplate:main

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
